@@ -27,13 +27,13 @@ def find_images(source: Path, offsets: dict[str, timedelta] | None = None) -> li
     return images
 
 
-def copy_images(source: Path, target: Path, offsets: dict[str, timedelta] | None = None) -> int:
+def copy_images(source: Path, target: Path, start_index: int = 1, offsets: dict[str, timedelta] | None = None) -> int:
     """Copy images from a source dir to a target dir, ordered by EXIF date and then source path."""
     images = find_images(source, offsets)
     images.sort(key=lambda x: f"{x.exif_date.isoformat() if x.exif_date else _MIN_DATE}|{x.path}")
-    digits = math.ceil(math.log10(len(images) + 1))  # number of digits required to represent all images in list
+    digits = math.ceil(math.log10(len(images) + start_index))  # number of digits required to represent all images in list
     with click.progressbar(images, label="Copying files") as entries:
-        for index, image in enumerate(entries, start=1):
+        for index, image in enumerate(entries, start=start_index):
             sourcefile = image.path
             targetfile = target / f"{_IMAGE_PREFIX}{index:0{digits}d}__{image.path.name}"
             shutil.copyfile(sourcefile, targetfile)
